Update GUI design